<project xmlns="http://maven.apache.org/POM/4.0.0" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.beingexcellent</groupId>
	<artifactId>beingExcellent</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>beingExcellent</name>
	<url>http://maven.apache.org</url>
	<properties>
		<spring.version>4.0.6.RELEASE</spring.version>
		<hibernate.version>4.3.6.Final</hibernate.version>
		<log4j.version>1.2.17</log4j.version>
		<jdk.version>1.7</jdk.version>
		<jstl.version>1.2</jstl.version>
		<mysql_connector.version>5.1.6</mysql_connector.version>
		<spring.security.version>3.2.5.RELEASE</spring.security.version>
		<context.path>beingExcellent</context.path>
		<tomcat-servlet-api.version>7.0.29</tomcat-servlet-api.version>
		<tomcat-jdbc.version>7.0.32</tomcat-jdbc.version>
		<lombok.version>1.14.8</lombok.version>
		<mongo.version>1.5.0.RELEASE</mongo.version>
		<slf4j-log4j12.version>1.6.6</slf4j-log4j12.version>
		<maven.war.plugin.version>2.3</maven.war.plugin.version>
		<m2eclipse.wtp.contextRoot>/</m2eclipse.wtp.contextRoot>
	</properties>
	<build>
		<finalName>${pom.artifactId}</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>

		<!-- hibernate -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>${hibernate.version}</version>
		</dependency>

		<!-- log4j -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<!-- Spring -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<!-- Spring Security -->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${spring.security.version}</version>
		</dependency>

		<!-- Spring Security JSP Taglib -->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-taglibs</artifactId>
			<version>${spring.security.version}</version>
		</dependency>

		<!-- jstl -->
		<dependency>
			<groupId>jstl</groupId>
			<artifactId>jstl</artifactId>
			<version>${jstl.version}</version>
		</dependency>

		<!-- mysql driver -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql_connector.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-servlet-api</artifactId>
			<version>${tomcat-servlet-api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-jdbc</artifactId>
			<version>${tomcat-jdbc.version}</version>
		</dependency>
		
		<dependency>
			<artifactId>slf4j-api</artifactId>
			<groupId>org.slf4j</groupId>
			<version>${slf4j-log4j12.version}</version>
		</dependency>
		
		<!-- Mongo -->
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-mongodb</artifactId>
			<version>${mongo.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>slf4j-api</artifactId>
					<groupId>org.slf4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<!-- Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>conf</id>
	        <build>
	        	<finalName>beingExcellent</finalName>
	        	<plugins>
	        		<plugin>
	        			<groupId>org.apache.maven.plugins</groupId>
	        			<artifactId>maven-war-plugin</artifactId>
	        			<version>${maven.war.plugin.version}</version>
	        			<configuration>
	        				<outputDirectory>${deployPath}</outputDirectory>
	        			</configuration>
	        		</plugin>
	        		<plugin>
		                <groupId>org.apache.tomcat.maven</groupId>
		                <artifactId>tomcat7-maven-plugin</artifactId>
		                <version>2.0</version>
		                <configuration>
		                    <path>/</path>
		                    <port>8080</port>
		                    <systemProperties> 
								<JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m -XX:NewRatio=6 -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled</JAVA_OPTS>
							</systemProperties>
		                </configuration>
		            </plugin>
	        	</plugins>
	        </build>
		</profile>
	</profiles>
	<repositories>
		<repository>
			<id>sonatype-oss-public</id>
				<url>https://oss.sonatype.org/content/groups/public/</url>
				<releases>
					<enabled>true</enabled>
				</releases>
			    <snapshots>
			      	<enabled>true</enabled>
			    </snapshots>
	  </repository>
	</repositories>
</project>
